--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -3,4 +3,6 @@
   <repository path="..\BaseProject.Admin\packages.config" />
   <repository path="..\BaseProject.Front\packages.config" />
   <repository path="..\BaseProject\packages.config" />
+  <repository path="..\Core.Common\packages.config" />
+  <repository path="..\Core\packages.config" />
 </repositories>
