--- a/Core.Common/Core.Common.csproj
+++ b/Core.Common/Core.Common.csproj
@@ -4,7 +4,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>ae5c5c02-782a-4472-bbb2-d9cb42216f2f</ProjectGuid>
+    <ProjectGuid>{C9B0C421-B7C4-4101-803D-EBD4264219EB}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Core.Common</RootNamespace>
@@ -33,6 +33,22 @@
   </PropertyGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="AutoMapper">
+      <HintPath>..\packages\AutoMapper.4.0.4\lib\net45\AutoMapper.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Include="Mapper\IHaveCustomMapping.cs" />
+    <Compile Include="Mapper\IMapFrom.cs" />
+    <Compile Include="Task\IRunAfterEachRequest.cs" />
+    <Compile Include="Task\IRunAtStartup.cs" />
+    <Compile Include="Task\IRunOnEachRequest.cs" />
+    <Compile Include="Task\IRunOnError.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
