--- a/Core/packages.config
+++ b/Core/packages.config
@@ -3,6 +3,7 @@
   <package id="Autofac" version="3.5.2" targetFramework="net45" />
   <package id="Autofac.Mvc5" version="3.3.4" targetFramework="net45" />
   <package id="AutoMapper" version="4.0.4" targetFramework="net45" />
+  <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.1.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.1.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.1.0" targetFramework="net45" />
