--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -32,6 +32,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <None Include="Alert\_Alert.cshtml" />
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
@@ -90,6 +91,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Alert\AlertDecoratorActionResult.cs" />
+    <Compile Include="Alert\AlertExtension.cs" />
+    <Compile Include="Alert\AlertViewModel.cs" />
     <Compile Include="Mapper\AutoMapperConfig.cs" />
     <Compile Include="Mapper\AutoMapperExtension.cs" />
     <Compile Include="Repository\EFGenericRepository.cs" />
