--- a/BaseProject.Admin/packages.config
+++ b/BaseProject.Admin/packages.config
@@ -10,4 +10,6 @@
   <package id="Microsoft.AspNet.WebPages" version="3.2.2" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.6.2" targetFramework="net45" />
+  <package id="PagedList" version="1.17.0.0" targetFramework="net45" />
+  <package id="PagedList.Mvc" version="4.5.0.0" targetFramework="net45" />
 </packages>
