--- a/Core.Common/Core.Common.csproj
+++ b/Core.Common/Core.Common.csproj
@@ -46,10 +46,15 @@
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="PagedList">
+      <HintPath>..\packages\PagedList.1.17.0.0\lib\net40\PagedList.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Base\ISearchFormViewModelBase.cs" />
+    <Compile Include="Base\ISearchViewModelBase.cs" />
     <Compile Include="Mapper\IHaveCustomMapping.cs" />
     <Compile Include="Mapper\IMapFrom.cs" />
     <Compile Include="Repository\IRepository.cs" />
