--- a/Core/packages.config
+++ b/Core/packages.config
@@ -8,5 +8,6 @@
   <package id="Microsoft.AspNet.Razor" version="3.1.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.1.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
+  <package id="NPOI" version="2.1.3.1" targetFramework="net45" />
   <package id="PagedList" version="1.17.0.0" targetFramework="net45" />
 </packages>
