--- a/Core/packages.config
+++ b/Core/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="adjunct-System.Xml.Linq.Extensions" version="2.0.0" targetFramework="net45" />
   <package id="Autofac" version="3.5.2" targetFramework="net45" />
   <package id="Autofac.Mvc5" version="3.3.4" targetFramework="net45" />
   <package id="AutoMapper" version="4.0.4" targetFramework="net45" />
