--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -104,6 +104,7 @@
       <HintPath>..\packages\Microsoft.AspNet.WebPages.3.1.0\lib\net45\System.Web.WebPages.Razor.dll</HintPath>
     </Reference>
     <Reference Include="System.Xml" />
+    <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Core.Common\Core.Common.csproj">
@@ -130,9 +131,9 @@
     <Compile Include="Utility\ExportExcel\IgnoreIEnumerableToDataTableAttribute.cs" />
     <Compile Include="Utility\Extension\EnumExtensions.cs" />
     <Compile Include="Utility\Extension\ObjectExtension.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <WCFMetadata Include="Service References\" />
+    <Compile Include="Utility\Paging\Extension\DynamicQueryExtension.cs" />
+    <Compile Include="Utility\Paging\PagingHelper.cs" />
+    <Compile Include="Utility\Paging\SearchViewModelProcess.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
