Add service code

--- a/Core.Common/Core.Common.csproj
+++ b/Core.Common/Core.Common.csproj
@@ -55,6 +55,8 @@
   <ItemGroup>
     <Compile Include="Base\ISearchFormViewModelBase.cs" />
     <Compile Include="Base\ISearchViewModelBase.cs" />
+    <Compile Include="Business\IBusiness.cs" />
+    <Compile Include="Business\IDeleteManyToManyProcess.cs" />
     <Compile Include="Mapper\IHaveCustomMapping.cs" />
     <Compile Include="Mapper\IMapFrom.cs" />
     <Compile Include="Repository\IRepository.cs" />
