--- a/BaseProject.Admin/packages.config
+++ b/BaseProject.Admin/packages.config
@@ -10,6 +10,10 @@
   <package id="Microsoft.AspNet.WebPages" version="3.2.2" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.6.2" targetFramework="net45" />
+  <package id="MvcSiteMapProvider.MVC5" version="4.6.18" targetFramework="net45" />
+  <package id="MvcSiteMapProvider.MVC5.Core" version="4.6.18" targetFramework="net45" />
+  <package id="MvcSiteMapProvider.Web" version="4.6.1" targetFramework="net45" />
   <package id="PagedList" version="1.17.0.0" targetFramework="net45" />
   <package id="PagedList.Mvc" version="4.5.0.0" targetFramework="net45" />
+  <package id="WebActivatorEx" version="2.0.1" targetFramework="net45" />
 </packages>
