--- a/Core/packages.config
+++ b/Core/packages.config
@@ -11,4 +11,5 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="NPOI" version="2.1.3.1" targetFramework="net45" />
   <package id="PagedList" version="1.17.0.0" targetFramework="net45" />
+  <package id="System.Linq.Dynamic" version="1.0.4" targetFramework="net45" />
 </packages>
