--- a/BaseProject.Admin/packages.config
+++ b/BaseProject.Admin/packages.config
@@ -3,9 +3,17 @@
   <package id="Microsoft.AspNet.Mvc" version="5.2.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.2.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.2" targetFramework="net45" />
+  <package id="Microsoft.Owin" version="3.0.1" targetFramework="net45" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="3.0.1" targetFramework="net45" />
+  <package id="Microsoft.Owin.Security" version="3.0.1" targetFramework="net45" />
+  <package id="Microsoft.Owin.Security.Cookies" version="3.0.1" targetFramework="net45" />
+  <package id="Microsoft.Owin.Security.Facebook" version="3.0.1" targetFramework="net45" />
+  <package id="Microsoft.Owin.Security.Google" version="3.0.1" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="MvcSiteMapProvider.MVC5" version="4.6.18" targetFramework="net45" />
   <package id="MvcSiteMapProvider.MVC5.Core" version="4.6.18" targetFramework="net45" />
   <package id="MvcSiteMapProvider.Web" version="4.6.1" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net45" />
+  <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="WebActivatorEx" version="2.0.1" targetFramework="net45" />
 </packages>
