--- a/BaseProject.Admin/packages.config
+++ b/BaseProject.Admin/packages.config
@@ -9,6 +9,8 @@
   <package id="Microsoft.Owin.Security.Cookies" version="3.0.1" targetFramework="net45" />
   <package id="Microsoft.Owin.Security.Facebook" version="3.0.1" targetFramework="net45" />
   <package id="Microsoft.Owin.Security.Google" version="3.0.1" targetFramework="net45" />
+  <package id="Microsoft.Owin.Security.MicrosoftAccount" version="3.0.1" targetFramework="net45" />
+  <package id="Microsoft.Owin.Security.OAuth" version="3.0.1" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="MvcSiteMapProvider.MVC5" version="4.6.18" targetFramework="net45" />
   <package id="MvcSiteMapProvider.MVC5.Core" version="4.6.18" targetFramework="net45" />
