--- a/BaseProject.Admin/packages.config
+++ b/BaseProject.Admin/packages.config
@@ -1,5 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="bootstrap" version="3.0.0" targetFramework="net45" />
+  <package id="EntityFramework" version="6.1.0" targetFramework="net45" />
+  <package id="jQuery" version="1.10.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Identity.Owin" version="2.2.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.2.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.2" targetFramework="net45" />
@@ -12,6 +18,7 @@
   <package id="Microsoft.Owin.Security.MicrosoftAccount" version="3.0.1" targetFramework="net45" />
   <package id="Microsoft.Owin.Security.OAuth" version="3.0.1" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
+  <package id="Modernizr" version="2.6.2" targetFramework="net45" />
   <package id="MvcSiteMapProvider.MVC5" version="4.6.18" targetFramework="net45" />
   <package id="MvcSiteMapProvider.MVC5.Core" version="4.6.18" targetFramework="net45" />
   <package id="MvcSiteMapProvider.Web" version="4.6.1" targetFramework="net45" />
