--- a/BaseProject.Admin/packages.config
+++ b/BaseProject.Admin/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Antlr" version="3.4.1.9004" targetFramework="net45" />
   <package id="Autofac" version="3.5.2" targetFramework="net45" />
+  <package id="AutoMapper" version="4.0.4" targetFramework="net45" />
   <package id="bootstrap" version="3.0.0" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.0" targetFramework="net45" />
   <package id="jQuery" version="1.10.2" targetFramework="net45" />
