--- a/Core/packages.config
+++ b/Core/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="adjunct-System.Xml.Linq.Extensions" version="2.0.0" targetFramework="net45" />
-  <package id="Autofac" version="3.5.2" targetFramework="net45" />
+  <package id="Autofac" version="3.4.0" targetFramework="net45" />
   <package id="Autofac.Mvc5" version="3.3.4" targetFramework="net45" />
   <package id="AutoMapper" version="4.0.4" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
@@ -13,6 +13,8 @@
   <package id="MvcSiteMapProvider.MVC5" version="4.6.18" targetFramework="net45" />
   <package id="MvcSiteMapProvider.MVC5.Core" version="4.6.18" targetFramework="net45" />
   <package id="MvcSiteMapProvider.Web" version="4.6.1" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net45" />
+  <package id="NLog" version="4.1.0" targetFramework="net45" />
   <package id="NPOI" version="2.1.3.1" targetFramework="net45" />
   <package id="PagedList" version="1.17.0.0" targetFramework="net45" />
   <package id="System.Linq.Dynamic" version="1.0.4" targetFramework="net45" />
