後台登入畫面

--- a/BaseProject.Admin/Web.config
+++ b/BaseProject.Admin/Web.config
@@ -7,7 +7,11 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <section name="system.identityModel" type="System.IdentityModel.Configuration.SystemIdentityModelSection, System.IdentityModel, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089" />
   </configSections>
+  <connectionStrings>
+    <add name="BaseProjectEntities" connectionString="metadata=res://*/BaseProject.csdl|res://*/BaseProject.ssdl|res://*/BaseProject.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=114.33.60.51\SQLEXPRESS;initial catalog=BaseProject;user id=BaseAdmin;password=1q2w3e4r;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -95,5 +99,9 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-  <connectionStrings><add name="BaseProjectEntities" connectionString="metadata=res://*/BaseProject.csdl|res://*/BaseProject.ssdl|res://*/BaseProject.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=114.33.60.51\SQLEXPRESS;initial catalog=BaseProject;user id=BaseAdmin;password=1q2w3e4r;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+  <system.identityModel>
+    <identityConfiguration>
+      <claimsAuthorizationManager type="BaseProject.Admin.Security.AuthorizationManager.BaseProjectResourceOperationAuthorisationManager, BaseProject.Admin" />
+    </identityConfiguration>
+  </system.identityModel>
 </configuration>
