--- a/BaseProject.Admin/BaseProject.Admin.csproj
+++ b/BaseProject.Admin/BaseProject.Admin.csproj
@@ -229,6 +229,7 @@
     <Compile Include="CodeMain.cs">
       <DependentUpon>BaseProject.tt</DependentUpon>
     </Compile>
+    <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\CodeMainController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="DI\Autofac\Modules\CustomAclModule.cs" />
@@ -238,7 +239,6 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RolesOperationPermission.cs">
       <DependentUpon>BaseProject.tt</DependentUpon>
@@ -251,6 +251,13 @@
     <Compile Include="Service\CodeMainService.cs" />
     <Compile Include="Service\ICodeMainService.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="UserLoginLog.cs">
+      <DependentUpon>BaseProject.tt</DependentUpon>
+    </Compile>
+    <Compile Include="ViewModels\Account\AccountViewModels.cs" />
+    <Compile Include="ViewModels\Account\AdminViewModel.cs" />
+    <Compile Include="ViewModels\Account\IdentityModels.cs" />
+    <Compile Include="ViewModels\Account\ManageViewModels.cs" />
     <Compile Include="ViewModels\CodeMain\Create.cs" />
     <Compile Include="ViewModels\CodeMain\Detail.cs" />
     <Compile Include="ViewModels\CodeMain\Edit.cs" />
@@ -278,6 +285,21 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+    <Content Include="Views\Account\ConfirmEmail.cshtml" />
+    <Content Include="Views\Account\ExternalLoginConfirmation.cshtml" />
+    <Content Include="Views\Account\ExternalLoginFailure.cshtml" />
+    <Content Include="Views\Account\ForgotPassword.cshtml" />
+    <Content Include="Views\Account\ForgotPasswordConfirmation.cshtml" />
+    <Content Include="Views\Account\Login.cshtml" />
+    <Content Include="Views\Account\Register.cshtml" />
+    <Content Include="Views\Account\ResetPassword.cshtml" />
+    <Content Include="Views\Account\ResetPasswordConfirmation.cshtml" />
+    <Content Include="Views\Account\SendCode.cshtml" />
+    <Content Include="Views\Account\VerifyCode.cshtml" />
+    <Content Include="Views\Account\_ChangePasswordPartial.cshtml" />
+    <Content Include="Views\Account\_ExternalLoginsListPartial.cshtml" />
+    <Content Include="Views\Account\_RemoveAccountPartial.cshtml" />
+    <Content Include="Views\Account\_SetPasswordPartial.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -287,6 +309,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Models\" />
     <Folder Include="ViewModels\Code\" />
   </ItemGroup>
   <ItemGroup>
