抽出資料庫

--- a/BaseProject.Admin/Web.config
+++ b/BaseProject.Admin/Web.config
@@ -11,8 +11,8 @@
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=114.33.60.51\SQLEXPRESS;initial catalog=BaseProject;persist security info=True;user id=BaseAdmin;password=1q2w3e4r" providerName="System.Data.SqlClient" />
-    <add name="BaseProjectEntities" connectionString="metadata=res://*/BaseProject.csdl|res://*/BaseProject.ssdl|res://*/BaseProject.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=114.33.60.51\SQLEXPRESS;initial catalog=BaseProject;user id=BaseAdmin;password=1q2w3e4r;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+    <!--<add name="BaseProjectEntities" connectionString="metadata=res://*/BaseProject.csdl|res://*/BaseProject.ssdl|res://*/BaseProject.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=114.33.60.51\SQLEXPRESS;initial catalog=BaseProject;user id=BaseAdmin;password=1q2w3e4r;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+    <add name="BaseProjectEntities" connectionString="metadata=res://*/BaseProject.csdl|res://*/BaseProject.ssdl|res://*/BaseProject.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=114.33.60.51\SQLEXPRESS;initial catalog=BaseProject;user id=BaseAdmin;password=1q2w3e4r;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
