--- a/BaseProject.Admin/BaseProject.Admin.csproj
+++ b/BaseProject.Admin/BaseProject.Admin.csproj
@@ -179,23 +179,6 @@
     <Content Include="DI\Autofac\ReadMe.txt" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
-    <EntityDeploy Include="BaseProject.edmx">
-      <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>BaseProject.Designer.cs</LastGenOutput>
-    </EntityDeploy>
-    <Content Include="BaseProject.Context.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>BaseProject.edmx</DependentUpon>
-      <LastGenOutput>BaseProject.Context.cs</LastGenOutput>
-    </Content>
-    <Content Include="BaseProject.edmx.diagram">
-      <DependentUpon>BaseProject.edmx</DependentUpon>
-    </Content>
-    <Content Include="BaseProject.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>BaseProject.edmx</DependentUpon>
-      <LastGenOutput>BaseProject.cs</LastGenOutput>
-    </Content>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
     <Content Include="fonts\glyphicons-halflings-regular.ttf" />
@@ -228,45 +211,9 @@
     <Compile Include="App_Start\IdentityConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
-    <Compile Include="AspNetRoles.cs">
-      <DependentUpon>BaseProject.tt</DependentUpon>
-    </Compile>
-    <Compile Include="AspNetUserClaims.cs">
-      <DependentUpon>BaseProject.tt</DependentUpon>
-    </Compile>
-    <Compile Include="AspNetUserLogins.cs">
-      <DependentUpon>BaseProject.tt</DependentUpon>
-    </Compile>
-    <Compile Include="AspNetUsers.cs">
-      <DependentUpon>BaseProject.tt</DependentUpon>
-    </Compile>
-    <Compile Include="BaseProject.Context.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>BaseProject.Context.tt</DependentUpon>
-    </Compile>
-    <Compile Include="BaseProject.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>BaseProject.tt</DependentUpon>
-    </Compile>
-    <Compile Include="BaseProject.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>BaseProject.edmx</DependentUpon>
-    </Compile>
-    <Compile Include="Code.cs">
-      <DependentUpon>BaseProject.tt</DependentUpon>
-    </Compile>
-    <Compile Include="CodeMain.cs">
-      <DependentUpon>BaseProject.tt</DependentUpon>
-    </Compile>
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\CodeMainController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
-    <Compile Include="C__MigrationHistory.cs">
-      <DependentUpon>BaseProject.tt</DependentUpon>
-    </Compile>
     <Compile Include="DI\Autofac\Modules\CustomAclModule.cs" />
     <Compile Include="DI\Autofac\Modules\MvcModule.cs" />
     <Compile Include="DI\Autofac\Modules\MvcSiteMapProviderModule.cs" />
@@ -274,15 +221,12 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201509091806569_Name.cs" />
-    <Compile Include="Migrations\201509091806569_Name.Designer.cs">
-      <DependentUpon>201509091806569_Name.cs</DependentUpon>
+    <Compile Include="Migrations\201509100644382_Init.cs" />
+    <Compile Include="Migrations\201509100644382_Init.Designer.cs">
+      <DependentUpon>201509100644382_Init.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RolesOperationPermission.cs">
-      <DependentUpon>BaseProject.tt</DependentUpon>
-    </Compile>
     <Compile Include="Security\AuthorizationManager\BaseProjectResourceOperationAuthorisationManager.cs" />
     <Compile Include="Security\AuthorizationManager\ResourceOperationPermission.cs" />
     <Compile Include="Security\ViewModel\Create.cs" />
@@ -291,9 +235,6 @@
     <Compile Include="Service\CodeMainService.cs" />
     <Compile Include="Service\ICodeMainService.cs" />
     <Compile Include="Startup.cs" />
-    <Compile Include="UserLoginLog.cs">
-      <DependentUpon>BaseProject.tt</DependentUpon>
-    </Compile>
     <Compile Include="ViewModels\Account\AccountViewModels.cs" />
     <Compile Include="ViewModels\Account\AdminViewModel.cs" />
     <Compile Include="ViewModels\Account\IdentityModels.cs" />
@@ -347,6 +288,10 @@
     <Folder Include="ViewModels\Code\" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\BaseProject.Model\BaseProject.Model.csproj">
+      <Project>{f3f372be-d142-47bd-8cc5-86dbbe15e388}</Project>
+      <Name>BaseProject.Model</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Core.Common\Core.Common.csproj">
       <Project>{c9b0c421-b7c4-4101-803d-ebd4264219eb}</Project>
       <Name>Core.Common</Name>
@@ -363,8 +308,8 @@
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201509091806569_Name.resx">
-      <DependentUpon>201509091806569_Name.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201509100644382_Init.resx">
+      <DependentUpon>201509100644382_Init.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
