--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -2,6 +2,7 @@
 <repositories>
   <repository path="..\BaseProject.Admin\packages.config" />
   <repository path="..\BaseProject.Front\packages.config" />
+  <repository path="..\BaseProject.Model\packages.config" />
   <repository path="..\Core.Common\packages.config" />
   <repository path="..\Core\packages.config" />
 </repositories>
