--- a/BaseProject.Admin/BaseProject.Admin.csproj
+++ b/BaseProject.Admin/BaseProject.Admin.csproj
@@ -107,6 +107,13 @@
     <Reference Include="Owin">
       <HintPath>..\packages\Owin.1.0\lib\net40\Owin.dll</HintPath>
     </Reference>
+    <Reference Include="PagedList, Version=1.17.0.0, Culture=neutral, PublicKeyToken=abbb863e9397c5e1, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\PagedList.1.17.0.0\lib\net40\PagedList.dll</HintPath>
+    </Reference>
+    <Reference Include="PagedList.Mvc">
+      <HintPath>..\packages\PagedList.Mvc.4.5.0.0\lib\net40\PagedList.Mvc.dll</HintPath>
+    </Reference>
     <Reference Include="System.IdentityModel" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Net.Http.WebRequest" />
@@ -175,6 +182,7 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\PagedList.css" />
     <Content Include="Content\Site.css" />
     <Content Include="DI\Autofac\ReadMe.txt" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
@@ -214,6 +222,7 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\CodeMainController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\UserOperationLogController.cs" />
     <Compile Include="DI\Autofac\Modules\CustomAclModule.cs" />
     <Compile Include="DI\Autofac\Modules\MvcModule.cs" />
     <Compile Include="DI\Autofac\Modules\MvcSiteMapProviderModule.cs" />
@@ -234,6 +243,8 @@
     <Compile Include="Security\ViewModel\Edit.cs" />
     <Compile Include="Service\CodeMainService.cs" />
     <Compile Include="Service\ICodeMainService.cs" />
+    <Compile Include="Service\IUserOpertationLogService.cs" />
+    <Compile Include="Service\UserOpertationLogService.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\Account\AccountViewModels.cs" />
     <Compile Include="ViewModels\Account\AdminViewModel.cs" />
@@ -243,6 +254,8 @@
     <Compile Include="ViewModels\CodeMain\Detail.cs" />
     <Compile Include="ViewModels\CodeMain\Edit.cs" />
     <Compile Include="ViewModels\CodeMain\Index.cs" />
+    <Compile Include="ViewModels\Code\Index.cs" />
+    <Compile Include="ViewModels\UserOperationLog\Index.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\web.config" />
@@ -275,6 +288,12 @@
     <Content Include="Views\Shared\DisplayTemplates\MenuHelperModel.cshtml" />
     <Content Include="Views\Shared\DisplayTemplates\CanonicalHelperModel.cshtml" />
     <Content Include="Scripts\jquery-2.1.4.min.map" />
+    <Content Include="Views\UserOperationLog\Index.cshtml" />
+    <Content Include="Views\CodeMain\Create.cshtml" />
+    <Content Include="Views\CodeMain\Delete.cshtml" />
+    <Content Include="Views\CodeMain\Details.cshtml" />
+    <Content Include="Views\CodeMain\Edit.cshtml" />
+    <Content Include="Views\CodeMain\Index.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -285,7 +304,6 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Models\" />
-    <Folder Include="ViewModels\Code\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BaseProject.Model\BaseProject.Model.csproj">
