--- a/BaseProject.Admin/packages.config
+++ b/BaseProject.Admin/packages.config
@@ -28,6 +28,8 @@
   <package id="MvcSiteMapProvider.Web" version="4.6.18" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
+  <package id="PagedList" version="1.17.0.0" targetFramework="net45" />
+  <package id="PagedList.Mvc" version="4.5.0.0" targetFramework="net45" />
   <package id="WebActivatorEx" version="2.0.6" targetFramework="net45" />
   <package id="WebGrease" version="1.6.0" targetFramework="net45" />
 </packages>
