--- a/BaseProject.Admin/packages.config
+++ b/BaseProject.Admin/packages.config
@@ -23,6 +23,7 @@
   <package id="Microsoft.Owin.Security.OAuth" version="3.0.1" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.8.3" targetFramework="net45" />
+  <package id="morelinq" version="1.1.1" targetFramework="net45" />
   <package id="MvcSiteMapProvider.MVC5" version="4.6.18" targetFramework="net45" />
   <package id="MvcSiteMapProvider.MVC5.Core" version="4.6.18" targetFramework="net45" />
   <package id="MvcSiteMapProvider.Web" version="4.6.18" targetFramework="net45" />
